Bug 551699.  Use the content insertion frame of our containing block when looking for our static position.  r=dbaron